src/test/Identity/Identity.expected
error: Identity.panda:1:21: '==' cannot operate on 'panda.core.Int8', 'panda.core.Int8'
error: Identity.panda:2:27: '==' cannot operate on 'panda.core.String', 'panda.core.String'
2 errors
