src/test/Identity/Identity.panda
Console.writeLine(5 == 5)
Console.writeLine("Hello" == "Goodbye")
